deploy: 7acc017e27bf066a3b6e047e100e7c5f7951955b

--- a/examples/cross-correlation-search/index.html
+++ b/examples/cross-correlation-search/index.html
@@ -622,7 +622,7 @@
 <div class="cell border-box-sizing text_cell rendered">
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now, load a particle stack on which to run the grid search. The particle stack will be loaded from a STAR file with the <code>RelionDataset</code> interface. See the "Read a particle stack" tutorial for more information.</p>
+<p>Now, load a particle stack on which to run the grid search. The particle stack will be loaded from a STAR file with the <code>RelionDataset</code> interface. See the <a href="https://mjo22.github.io/cryojax/examples/read-dataset/">Read a particle stack</a> tutorial for more information.</p>
 </div>
 </div>
 </div>
@@ -838,7 +838,7 @@ then the cartesian product of the grid points of all of its leaves.
 <div class="cell border-box-sizing text_cell rendered">
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now, we have to break up the <code>imaging_pipeline</code> into pieces using <code>equinox.partition</code>, so that we may smoothly pass through jit/vmap boundaries bfeore recombining pieces using <code>equinox.combine</code>. See the "Simulate a batch of images" tutorial for an introduction to pytree manipulation with <code>equinox</code>.</p>
+<p>Now, we have to break up the <code>imaging_pipeline</code> into pieces using <code>equinox.partition</code>, so that we may smoothly pass through jit/vmap boundaries bfeore recombining pieces using <code>equinox.combine</code>. See the <a href="https://mjo22.github.io/cryojax/examples/simulate-micrograph/">Simulate a batch of images</a> tutorial for an introduction to pytree manipulation with <code>equinox</code>.</p>
 </div>
 </div>
 </div>
