--- a/404.html
+++ b/404.html
@@ -1575,7 +1575,7 @@
         
   
   <span class="md-ellipsis">
-    Helpers for equinox filtered transformations
+    Helper functions for Equinox filtering
   </span>
   
 
