--- a/examples/cross-correlation-search/index.html
+++ b/examples/cross-correlation-search/index.html
@@ -1593,7 +1593,7 @@
         
   
   <span class="md-ellipsis">
-    Helpers for equinox filtered transformations
+    Helper functions for Equinox filtering
   </span>
   
 
