--- a/examples/ewald-sphere/index.html
+++ b/examples/ewald-sphere/index.html
@@ -1577,7 +1577,7 @@
         
   
   <span class="md-ellipsis">
-    Helpers for equinox filtered transformations
+    Helper functions for Equinox filtering
   </span>
   
 
