--- a/index.html
+++ b/index.html
@@ -1660,7 +1660,7 @@
         
   
   <span class="md-ellipsis">
-    Helpers for equinox filtered transformations
+    Helper functions for Equinox filtering
   </span>
   
 
